unpackaged/main/default/objects/SBQQ__QuoteProcess__c/fields/SBQQ__Default__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this quote process as default.</description>
    <inlineHelpText>Sélectionnez la case pour permettre l&#39;utilisation du format d&#39;entrée.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>