unpackaged/main/default/objects/SBQQ__QuoteProcess__c/fields/SBQQ__GuidedOnly__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__GuidedOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that controls whether quotes covered by this process force guided product selection or allow for ad-hoc filtering.</description>
    <inlineHelpText>Sélectionnez cette case si vous souhaitez forcer la sélection de produits guidée pour les devis couverts par ce processus, sinon le filtrage ad-hoc s&#39;applique par défaut.</inlineHelpText>
    <label>Guided Only</label>
    <type>Checkbox</type>
</CustomField>