unpackaged/main/default/objects/SBQQ__QuoteProcess__c/fields/SBQQ__ProductAutoSelected__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ProductAutoSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag that determines if product is auto selected if it&#39;s the only one returned by a search.</description>
    <inlineHelpText>Sélectionnez cette case pour sélectionner automatiquement le produit lorsqu&#39;il est le seul élément renvoyé dans une recherche.</inlineHelpText>
    <label>Auto Select Product?</label>
    <type>Checkbox</type>
</CustomField>