unpackaged/main/default/objects/SBQQ__QuoteProcess__c/fields/SBQQ__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__SortOrder__c</fullName>
    <description>Determines display order of quote processes in Line Editor (pick list rendering only).</description>
    <inlineHelpText>Spécifiez le numéro séquentiel qui détermine l&#39;ordre d&#39;affichage du processus du devis.</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>